deploy/kubernetes/etcd.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: morphix

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etcd
  namespace: morphix
  labels:
    app: etcd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etcd
  template:
    metadata:
      labels:
        app: etcd
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: etcd
          image: bitnami/etcd:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "100Mi"
              cpu: "100m"
          ports:
            - containerPort: 2379
---
apiVersion: v1
kind: Service
metadata:
  name: etcd
  namespace: morphix
spec:
  selector:
    app: etcd
  type: ClusterIP
  ports:
    - name: service
      port: 2379
      targetPort: 2379
      protocol: TCP
