deploy/kubernetes/gateway-svc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: morphix

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  namespace: morphix
  labels:
    app: gateway-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: registry.cn-shenzhen.aliyuncs.com/ydssx/gateway:1.0.1
          imagePullPolicy: Always
          resources:
            limits:
              memory: "100Mi"
              cpu: "100m"
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: aliyun-registry-secret

---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: morphix
spec:
  selector:
    app: gateway-service
  type: ClusterIP
  ports:
    - name: gateway-service
      port: 8000
      targetPort: 8000
      protocol: TCP
