deploy/kubernetes/jaeger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  namespace: morphix
  labels:
    app: jaeger
spec:
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "50Mi"
              cpu: "100m"
          ports:
            - containerPort: 5775
              protocol: UDP
            - containerPort: 6831
              protocol: UDP
            - containerPort: 6832
              protocol: UDP
            - containerPort: 5778
              protocol: TCP
            - containerPort: 16686
              protocol: TCP
            - containerPort: 16685
              protocol: TCP
            - containerPort: 9411
              protocol: TCP
            - containerPort: 4317
              protocol: TCP
            - containerPort: 4318
              protocol: TCP
          args:
            - "--memory.max-traces"
            - "100"
            - "--query.base-path"
            - "/jaeger/ui"
            - "--prometheus.server-url"
            - "http://prometheus.morphix:9090"

---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: morphix
spec:
  selector:
    app: jaeger
  type: ClusterIP
  ports:
    - name: service
      port: 16686
      targetPort: 16686
      protocol: TCP
    - name: jaeger-grpc
      port: 4317
      targetPort: 4317
      protocol: TCP
