deploy/kubernetes/nats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats
  labels:
    app: nats
  namespace: morphix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - name: nats
        image: "nats:2.7.4-alpine"
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 50m
            memory: 50Mi      
        ports:
        - containerPort: 4222
          name: tcp
        - containerPort: 6222
          name: monitor
        - containerPort: 8222
          name: metric

---
apiVersion: v1
kind: Service
metadata:
  name: nats
  labels:
    app: nats
  namespace: morphix
spec:
  ports:
    - port: 4222
      targetPort: 4222
      name: tcp
  selector:
    app: nats
  type: LoadBalancer
  # clusterIP: None
