deploy/kubernetes/otelcol.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otelcol
  namespace: morphix
  labels:
    app: otelcol
spec:
  selector:
    matchLabels:
      app: otelcol
  template:
    metadata:
      labels:
        app: otelcol
        sidecar.istio.io/inject: "false"
      annotations:
        # checksum/config: 43d3318bb84ce994167ce160b46e0e06eb17a17b8de61b578bf4a3e97f4dcdd1
        morphix: "true"
        prometheus.io/port: "9464"
        prometheus.io/scrape: "true"
    spec:
      # serviceAccountName: prometheus
      containers:
        - name: otelcol
          # securityContext:
          #   runAsUser: 0 # 指定以 root 用户身份运行容器
          image: otel/opentelemetry-collector-contrib:0.76.1
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "100Mi"
              cpu: "100m"
          ports:
            - name: jaeger-compact
              containerPort: 6831
              protocol: UDP
            - name: jaeger-grpc
              containerPort: 14250
              protocol: TCP
            - name: jaeger-thrift
              containerPort: 14268
              protocol: TCP
            - name: metrics
              containerPort: 8888
              protocol: TCP
            - name: otlp
              containerPort: 4317
              protocol: TCP
            - name: otlp-http
              containerPort: 4318
              protocol: TCP
            - name: prometheus
              containerPort: 9464
              protocol: TCP
            - name: zipkin
              containerPort: 9411
              protocol: TCP
          args:
            - --config=/etc/config/otelcol-config.yml
            - --config=/etc/config/otelcol-config-extras.yml
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
          # env:
          #   - name: MY_POD_IP
          #     valueFrom:
          #       fieldRef:
          #         apiVersion: v1
          #         fieldPath: status.podIP
      volumes:
        - name: config-volume
          configMap:
            name: otelcol

---
apiVersion: v1
kind: Service
metadata:
  name: otelcol
  namespace: morphix
spec:
  selector:
    app: otelcol
  type: ClusterIP
  ports:
    - name: jaeger-compact
      port: 6831
      targetPort: 6831
      protocol: UDP
    - name: jaeger-grpc
      port: 14250
      targetPort: 14250
      protocol: TCP
    - name: jaeger-thrift
      port: 14268
      targetPort: 14268
      protocol: TCP
    - name: metrics
      port: 8888
      targetPort: 8888
      protocol: TCP
    - name: otlp
      port: 4317
      targetPort: 4317
      protocol: TCP
    - name: otlp-http
      port: 4318
      targetPort: 4318
      protocol: TCP
    - name: prometheus
      port: 9464
      targetPort: 9464
      protocol: TCP
    - name: zipkin
      port: 9411
      targetPort: 9411
      protocol: TCP
