deploy/kubernetes/sms-svc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: morphix

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sms-service
  namespace: morphix
  labels:
    app: sms-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sms-service
  template:
    metadata:
      labels:
        app: sms-service
    spec:
      containers:
        - name: sms-service
          image: registry.cn-shenzhen.aliyuncs.com/ydssx/sms:1.0.1
          imagePullPolicy: Always
          resources:
            limits:
              memory: "50Mi"
              cpu: "100m"
          ports:
            - containerPort: 9001
      imagePullSecrets:
        - name: aliyun-registry-secret

---
apiVersion: v1
kind: Service
metadata:
  name: sms-service
  namespace: morphix
spec:
  selector:
    app: sms-service
  type: ClusterIP
  ports:
    - name: sms-service
      port: 9001
      targetPort: 9001
      protocol: TCP
