deploy/kubernetes/traefik.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:v2.10
          resources:
            limits:
              memory: "50Mi"
              cpu: "100m"
          args:
            - --api.insecure
            - --providers.kubernetesingress
            - --accesslog
          ports:
            - name: web
              containerPort: 80
            - name: dashboard
              containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-service
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: dashboard
  selector:
    app: traefik

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service
spec:
  type: NodePort
  ports:
    - targetPort: web
      port: 8001
  selector:
    app: traefik
