deploy/kubernetes/user-svc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: morphix

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: morphix
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: registry.cn-shenzhen.aliyuncs.com/ydssx/user:1.0.1
          imagePullPolicy: Always
          resources:
            limits:
              memory: "50Mi"
              cpu: "100m"
          ports:
            - containerPort: 9000
      imagePullSecrets:
        - name: aliyun-registry-secret

---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: morphix
spec:
  selector:
    app: user-service
  type: ClusterIP
  ports:
    - name: user-service
      port: 9000
      targetPort: 9000
      protocol: TCP
