deploy/kubernetes/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: morphix-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: morphix
spec:
  hosts:
  - "*"
  gateways:
  - morphix-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: gateway-service.morphix
        port:
          number: 8000
